# AI_Agent_Project

./: .env.example  .gitignore  AI自主保存的简报.xlsx  README.md  agent_v1.py  agent_v2_tools.py  ask_ai.py  get_news.py  requirements.txt  vercel.json  每日AI自动简报.xlsx
api/: index.py
infra-diagnostic-agent/: .env.example  README.md  pyproject.toml  requirements.txt
infra-diagnostic-agent/data/knowledge_base/: err_os_dep.md  payment_auth_failure.md  restart_loop_after_config_change.md  windows_dependency_checks.md
infra-diagnostic-agent/docs/: architecture.md  command-executor.md  demo_script.md  sample_issues.md
infra-diagnostic-agent/src/infra_diagnostic_agent/: __init__.py  cli.py  config.py
infra-diagnostic-agent/src/infra_diagnostic_agent/core/: __init__.py  agent_loop.py  embeddings.py  knowledge_base.py  rag.py
infra-diagnostic-agent/src/infra_diagnostic_agent/tools/: __init__.py  command_executor.py  docs_search.py
infra-diagnostic-agent/tests/: __init__.py  test_agent_loop.py  test_command_executor.py  test_docs_search.py  test_embeddings.py  test_knowledge_base.py  test_rag.py  test_smoke.py
public/: index.html
smart_ticket_agent/: __init__.py  agent.py  config.py  database.py  schemas.py  service.py  web.py
智能工单 Agent/: db_tools.py  init_db.py  smart_agent.py
