[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-diagnostic-agent"
version = "0.1.0"
description = "Command-line AI diagnostic assistant for infrastructure troubleshooting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "numpy",
  "openai",
  "python-dotenv",
]

[project.scripts]
infra-diagnostic-agent = "infra_diagnostic_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
